# URLpolice

./: .gitignore  README.md  pyproject.toml  test_url.py
.github/workflows/: publish.yml
src/urlpolice/: __init__.py  _dns_cache.py  _version.py  config.py  constants.py  exceptions.py  presets.py  result.py  utils.py  validator.py
src/urlpolice/checks/: __init__.py  credentials.py  dns.py  encoding.py  homograph.py  injection.py  ip.py  port.py  redirect.py  scheme.py  ssrf.py  traversal.py  xss.py
tests/: conftest.py  test_config.py  test_credentials.py  test_dns.py  test_encoding.py  test_homograph.py  test_injection.py  test_ip.py  test_redirect.py  test_result.py  test_schemes.py  test_ssrf.py  test_traversal.py  test_validator.py
